--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: bundle exec jekyll serve --host 0.0.0.0
+    command: bundle exec jekyll serve --config /logbook/docs/_config.yml --host 0.0.0.0
     volumes:
       - .:/logbook
     ports:
