--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-docs/work
+/docs/work
 
 # jekyll
-_site
-.sass-cache
+/_site
+/.sass-cache
+
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+/node_modules
+/yarn-error.log
+
+.byebug_history
