--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: bundle exec jekyll serve --config /logbook/docs/_config.yml --host 0.0.0.0
+    command: bash -c "bundle exec jekyll serve --config /logbook/docs/_config.yml --host 0.0.0.0 --detach && bin/rails server --binding 0.0.0.0"
     volumes:
       - .:/logbook
-    ports:
-      - "4000:4000"
+    ports: ["3000:3000", "4000:4000"]
