--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: Logbook
 author: ssobczak
 email: szymon.sobczak@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "xxx:"
   Daily logbook of things worth remembering.
 twitter_username: szymonsobczak
 github_username:  ssobczak
@@ -11,7 +11,7 @@ theme: minima
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
-  date_format: "%b %-d, %Y"
+  date_format: "%a, %F"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
@@ -23,7 +23,14 @@ markdown: kramdown
 kramdown:
   input: GFM
 
-source: docs
+collections_dir: docs
+collections:
+  books:
+    output: true
+  classes:
+    output: true
+  posts:
+    output: true
 
 defaults:
   - scope:
