add link testing

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,6 +13,9 @@ theme: minima
 minima:
   date_format: "%a, %F"
 
+plugins:
+  - jekyll-feed
+
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
